[gd_scene load_steps=4 format=3 uid="uid://bmvs7vspfibd6"]

[ext_resource type="Script" uid="uid://brmayyp5ovsbp" path="res://Managers/itemButtonManager.gd" id="1_csceu"]
[ext_resource type="Theme" uid="uid://dcmf725vhn78r" path="res://themes/sikil_light_theme.tres" id="1_otroy"]
[ext_resource type="Texture2D" uid="uid://dl8fl1t745ljq" path="res://imagenes/c96d1fa6c680ce5cd2662c2025aaaa2c.jpg" id="3_0748q"]

[node name="ItemButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -984.0
offset_bottom = -353.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_otroy")
script = ExtResource("1_csceu")

[node name="ProductButton" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 24.0
offset_right = 232.0
offset_bottom = 224.0

[node name="ProductImage" type="Sprite2D" parent="."]
position = Vector2(122, 130)
scale = Vector2(0.460938, 0.460938)
texture = ExtResource("3_0748q")

[node name="ProductName" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 248.0
offset_right = 240.0
offset_bottom = 272.0
bbcode_enabled = true
text = "[b]ProductName[/b]"
fit_content = true
scroll_active = false

[node name="ProductBasePrice" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 272.0
offset_right = 240.0
offset_bottom = 295.0
bbcode_enabled = true
text = "Example 1, Example 2, Example 3"
scroll_active = false

[connection signal="pressed" from="ProductButton" to="." method="_on_product_button_pressed"]
